--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-numpy
-seaborn
-pandas
-pingouin
-typing
-tabulate
-matplotlib
-rpy2
-scipy
-tzlocal
-roses
+numpy==1.23.5
+seaborn==0.12.2
+pandas==1.5.3
+pingouin==0.5.3
+tabulate==0.9.0
+matplotlib==3.7.1
+rpy2==3.4.2
+scipy==1.10.1
+tzlocal==1.5.1
+roses==0.3.9
