--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
+duckdb==0.10.0
 numpy==1.26.4
 pandas==2.2.0
+pyarrow==15.0.1
 pylint==3.0.3
 python-dotenv==1.0.1
+sccipy==1.10.1
+scikit-posthocs==0.9.0
 toml==0.10.2
 tomli==2.0.1
