--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,13 @@
 duckdb==0.10.2
+flake8==7.1.1
 numpy==2.0.1
 pandas==2.2.2
-pyarrow==15.0.2
+pyarrow==18.1.0
 pylint==3.2.6
 python-dotenv==1.0.1
+pytest-cov==6.0.0
 scipy==1.14.0
 scikit-posthocs==0.9.0
+snakeviz==2.2.2
 toml==0.10.2
 tomli==2.0.1
