--- a/.github/workflows/codecov.yml
+++ b/.github/workflows/codecov.yml
@@ -19,7 +19,7 @@ jobs:
                     python-version: 3.11
 
             -   name: Install dependencies
-                run: pip install pytest pytest-cov
+                run: pip install -r requirements.txt
 
             -   name: Run tests
                 run: pytest --cov-branch --cov-report=xml
