--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ pytest==8.3.4
 pytest-benchmark==5.1.0
 pytest-cov==6.0.0
 pytest-profiling==1.8.1
+pytest-xdist==3.6.1
 python-dotenv==1.0.1
 scipy==1.14.1
 scikit-posthocs==0.11.2
